--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -13,39 +13,42 @@
     "db:migrate": "tsx ./lib/db/migrate.ts"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.18.0",
-    "@heroui/button": "^2.2.17",
-    "@heroui/card": "^2.2.16",
+    "@clerk/nextjs": "^6.12.4",
+    "@heroui/button": "2.2.16",
+    "@heroui/card": "^2.2.15",
     "@heroui/divider": "^2.2.11",
-    "@heroui/input": "^2.4.17",
-    "@heroui/system": "^2.4.13",
+    "@heroui/input": "2.4.16",
+    "@heroui/input-otp": "^2.1.18",
+    "@heroui/system": "2.4.12",
     "@heroui/theme": "^2.4.13",
-    "@hookform/resolvers": "^5.0.1",
-    "@imagekit/next": "^2.1.0",
-    "@neondatabase/serverless": "^1.0.0",
-    "dotenv": "^16.5.0",
-    "drizzle-orm": "^0.43.1",
-    "framer-motion": "^12.9.2",
-    "imagekit": "^6.0.0",
-    "lucide-react": "^0.503.0",
-    "next": "15.3.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.1",
-    "uuid": "^11.1.0",
+    "@hookform/resolvers": "^4.1.3",
+    "@neondatabase/serverless": "^0.9.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.4",
+    "framer-motion": "11.13.1",
+    "imagekit": "^5.0.0",
+    "imagekitio-next": "^1.0.1",
+    "lucide-react": "^0.363.0",
+    "next": "^15.2.3",
+    "next-themes": "^0.4.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.2",
+    "uuid": "^9.0.1",
     "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "drizzle-kit": "^0.31.0",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4",
-    "tsx": "^4.19.3",
-    "typescript": "^5"
+    "@types/node": "20.5.7",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "@types/uuid": "^9.0.8",
+    "autoprefixer": "10.4.19",
+    "drizzle-kit": "^0.21.3",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "15.0.4",
+    "postcss": "8.4.49",
+    "tailwindcss": "3.4.16",
+    "tsx": "^4.7.1",
+    "typescript": "5.6.3"
   }
 }
